--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -29,6 +29,7 @@
   "error": "Error",
   "noResultsFound": "No results found",
   "restaurantSearchResults": "Search Results for Restaurants: {{ searchString }}",
-  "foodSearchResults": "Search Results for Foods: {{ searchString }}"
+  "foodSearchResults": "Search Results for Foods: {{ searchString }}",
+  "popularFoods": "Popular Foods"
 }
 
