--- a/client/locales/kz/translation.json
+++ b/client/locales/kz/translation.json
@@ -29,5 +29,7 @@
   "error": "Қате",
   "noResultsFound": "Нәтижелер табылмады",
   "restaurantSearchResults": "Ресторандарды іздеу нәтижелері: {{ searchString }}",
-  "foodSearchResults": "Тағамдарды іздеу нәтижелері: {{ searchString }}"
+  "foodSearchResults": "Тағамдарды іздеу нәтижелері: {{ searchString }}",
+  "popularFoods": "Танымал тағамдар"
+
 }
