--- a/client/locales/ru/translation.json
+++ b/client/locales/ru/translation.json
@@ -29,5 +29,6 @@
   "error": "Ошибка",
   "noResultsFound": "Результаты не найдены",
   "restaurantSearchResults": "Результаты поиска ресторанов: {{ searchString }}",
-  "foodSearchResults": "Результаты поиска блюд: {{ searchString }}"
+  "foodSearchResults": "Результаты поиска блюд: {{ searchString }}",
+  "popularFoods": "Популярные блюда"
 }
